--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ Pillow>=10.0.0
 # PDF Report Generation
 reportlab>=4.0.0
 
+# Word Document Generation
+python-docx>=1.1.0
+
 # Data Processing
 python-dateutil>=2.8.2
 
