--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 Config.py
+
+
+.env
+venv/
+.DS_Store
+# Node / Next
+node_modules/
+**/node_modules/
+.next/
+out/
+.turbo/
+.vercel/
+
+# Python
+venv/
+.venv/
+__pycache__/
+
+# Misc
+.DS_Store
