--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,4 +1,5 @@
 # Use Python 3.11 slim image
+
 FROM python:3.11-slim
 
 # Set working directory
@@ -23,5 +24,5 @@ COPY . .
 EXPOSE 8000
 
 # Run the FastAPI app with uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "$PORT"]
 
