chore(railway): add root railway.json, remove worker/railway.json, fix Dockerfile CMD

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -23,5 +23,5 @@ COPY . .
 EXPOSE 8000
 
 # Run the FastAPI app with uvicorn
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "$PORT"]
 
